# kinema

./: .gitignore  Dockerfile  README.md  manifest.toml  pyproject.toml
.github/workflows/: docker-publish.yml  test.yml
kinema/: __init__.py  __main__.py  beats.py  cli.py  pipeline.py  sources.py  titles.py  transitions.py
recipes/: all-mask-random.yaml  beat-drop.yaml  beat-edge-strobe.yaml  beat-invert.yaml  beat-mask-flip.yaml  beat-strobe.yaml  beat-sync-fast.yaml  beat-sync-half.yaml  chaos-shuffle.yaml  chroma-glow.yaml  diagonal-sweep.yaml  edge-flash.yaml  edge-only.yaml  emboss-etch.yaml  film-leader.yaml  focus-pull.yaml  glitch-cut.yaml  hue-drift.yaml  hybrid-wash.yaml  invert-pulse.yaml  iris-only.yaml  mask-bleed.yaml  pixelate-decay.yaml  posterize-beat.yaml  rapid-fire.yaml  rgb-split.yaml  sepia-ghost.yaml  side-wipes.yaml  slice-storm.yaml  slow-burn.yaml  smooth-fade.yaml  soft-bloom.yaml  solarize-wash.yaml  squeeze-snap.yaml  tape-decay.yaml  threshold-punch.yaml  vertical-pulse.yaml
scripts/: cancel_running.py  register.py  show_failures.py  verify_all_recipes.py  verify_subset.py
tests/: test_pipeline.py  test_transitions.py
